--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,23 +15,23 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-2 col-sm-offset-5 text-center">
-              <div class="form-group">
-                  <label for="name">Player 1: </label>
+              <div class="form-group" id="player1Form">
+                  <label for="name">Player Name 2: </label>
                   <input type="text" id="player1name" class="form-control" placeholder="name">
               </div>
-              <div class="form-group">
-                  <label for="name">Player 2: </label>
+              <div class="form-group" id="player2Form">
+                  <label for="name">Player Name 1: </label>
                   <input type="text" id="player2name" class="form-control" placeholder="name">
               </div>
               <button id="sendPlayers" class="sendPlayers" type="submit">Enter Players</button>
-              <button id="startGame" class="startGame" type="submit">Start Game</button>
+              <button id="startGame" class="startGame" type="submit" disabled>Start Game</button>
         </div>
       </div>
     </div>
 
     <div class="row">
         <div class="col-md-2 col-sm-offset-2">
-          <p class="gameStatus" id="gameStatus"><p>
+          <p class="gameStatus" id="gameStatus">  <p>
         </div>
     </div>
 
