general cleaning and identation fixes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-    <script src="/kalah.js"></script>
+    <script src="/js/kalah.js"></script>
 </head>
 <body>
 <h1>Kalah Game</h1>
@@ -16,11 +16,11 @@
       <div class="row">
         <div class="col-sm-2 col-sm-offset-5 text-center">
               <div class="form-group" id="player1Form">
-                  <label for="name">Player Name 2: </label>
+                  <label>Player Name 2: </label>
                   <input type="text" id="player1name" class="form-control" placeholder="name">
               </div>
               <div class="form-group" id="player2Form">
-                  <label for="name">Player Name 1: </label>
+                  <label>Player Name 1: </label>
                   <input type="text" id="player2name" class="form-control" placeholder="name">
               </div>
               <button id="sendPlayers" class="sendPlayers" type="submit">Enter Players</button>
